--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,19 @@ color: lightblue;
 .data {
     color: grey;
 }
+
+.sottolineato {
+    background-color: yellow;
+}
+
+thead {
+    background-color: rgb(11, 218, 218);
+}
+
+th {
+    color: white;
+}
+
+.riga-dispari {
+    background-color: lightblue;
+}
