--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+* {
+    box-sizing: border-box;
+}
+
+
+
+
 .intestazione {
     height: 200px;
     background-image: url(../img/pattern.png);
@@ -32,6 +39,12 @@ color: lightblue;
     background-color: yellow;
 }
 
+table{
+    border-collapse: collapse;
+    table-layout: fixed;
+    width: 100%;
+}
+
 thead {
     background-color: rgb(11, 218, 218);
 }
@@ -52,6 +65,9 @@ th {
     width: 250px;
     font-size: 25px;
     color: white;
+    background-size: cover;
+    background-position: center;
+    padding: 10px;
 }
 
 .uno {
